ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
      args:
        - /nginx-ingress-controler
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
          #Configmap that you need to create as:
          #kind: ConfigMap
          #apiVersion: v1
          #metadata:
          #  name: nginx-configuration
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443


 # Create also a service that will bind the ingress to the kube cluster as:
 # apiVersion: v1
 # kind: Service
 # metadata:
 #   name: nginx-ingress
 # spec:
 #   type: NodePort
 #   ports:
 #     - port: 80
 #       targetPort: 80
 #       protocol: TCP
 #       name: http
 #     - port: 443
 #       targetPort: 443
 #       protocol: TCP
 #       name: https
 #   selector:
 #     name: nginx-ingress
 #
 #
 # You will nee also a service account as:
 # apiVersion: v1
 # kind: ServiceAccount
 # metadata:
 #   name: nginx-ingress-serviceaccount
