pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    location: europe
    anylabel: iwant
spec:
  containers:
    - name: nginx-container
      image: nginx
