readiness-probe.yaml
# Readiness probes are used to let kubelet know when the application is ready to accept new traffic.
# If the application needs some time to initialize state after the process has started, configure the 
# readiness probe to tell Kubernetes to wait before sending new traffic. A primary use case for readiness 
# probes is directing traffic to deployments behind a service.
# One important thing to note with readiness probes is that it runs during the pod’s entire lifecycle.
# Info from "https://medium.com/dev-genius/understanding-kubernetes-probes-5daaff67599a"

apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      ports:
        - containerPort: 8080
      readinessProbe:
        httpGet:
          path: /api/ready
          port: 8080

    #readinessProbe:
    #  tcpSocket:
    #    port: 3306
    #
    #readinessProbe:
    #  exec:
    #    command:
    #      - cat
    #      - /app/is_ready
    #
    #  initialDelaySeconds: 10
    #  periodSeconds: 5
    #  failureThreshold: 8
